# config/routes.rb
@@ -15,6 +15,15 @@ Rails.application.routes.draw do
   namespace :api, :defaults => {:format => :json} do
     namespace :v1 do
       get 'repositories/lookup', to: 'repositories#lookup', as: :repositories_lookup
+      
+      resources :packages, only: [:index] do
+        collection do
+          get 'ecosystems'
+          get ':ecosystem/:name', to: 'packages#show', as: :show, constraints: { ecosystem: /[^\/]+/, name: /.+/ }
+          get ':ecosystem', to: 'packages#index', constraints: { ecosystem: /[^\/]+/ }
+        end
+      end
+      
       resources :hosts, constraints: { id: /.*/ }, only: [:index, :show] do
         resources :repositories, constraints: { id: /.*/ }, only: [:index, :show] do
           resources :issues, constraints: { id: /.*/ }, only: [:index, :show]
